# deep-research

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/agents/: graph.py  plan_review.py  planner.py  researcher.py  state.py  synthesizer.py
src/api/: routes.py  schemas.py
src/core/: config.py  llm.py
src/prompts/: prompts.py
