[tool.poetry]
name = "deep-research"
version = "0.1.0"
description = ""
authors = ["Alexander Zwerner <alexander.zwerner@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]
# Optional: if your code is inside `src/`, e.g., `src/main.py`

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = ">=2.11.4,<3.0.0"
langchain = ">=0.3.25,<0.4.0"
langgraph = ">=0.4.3,<0.5.0"
langchain-openai = ">=0.3.16,<0.4.0"
fastapi = {extras = ["standard"], version = ">=0.115.12,<0.116.0"}
pydantic-settings = ">=2.9.1,<3.0.0"
langchain-tavily = ">=0.1.6,<0.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
